RESOLVED FIXED232706
REGRESSION(r285077) [GLIB] 'MemoryPressureMonitor' has not been declared
https://bugs.webkit.org/show_bug.cgi?id=232706
Summary REGRESSION(r285077) [GLIB] 'MemoryPressureMonitor' has not been declared
Jim Mason
Reported 2021-11-04 03:23:49 PDT
Bug 232519 introduces some changes to unify the memoryPressureMonitorDisabled implementation. It does this by calling a new static method `MemoryPressureMonitor::disabled`. It appears the MemoryPressureMonitor class is conditionally defined on OS(LINUX). For non-Linux GTK builds, I am getting: /build/rtutils/components/desktop/webkitgtk4-dev/webkit/Source/WebKit/UIProcess/glib/WebProcessPoolGLib.cpp:97:9: error: 'MemoryPressureMonitor' has not been declared 97 | if (MemoryPressureMonitor::disabled()) | ^~~~~~~~~~~~~~~~~~~~~ /build/rtutils/components/desktop/webkitgtk4-dev/webkit/Source/WebKit/UIProcess/soup/WebProcessPoolSoup.cpp:46:9: error: 'MemoryPressureMonitor' has not been declared 46 | if (MemoryPressureMonitor::disabled()) | ^~~~~~~~~~~~~~~~~~~~~
Attachments
Build fix (2.16 KB, patch)
2021-11-04 08:38 PDT, Lauro Moura
no flags
Patch (1.56 KB, patch)
2021-11-08 14:07 PST, Adrian Perez
no flags
Lauro Moura
Comment 1 2021-11-04 08:38:41 PDT
Created attachment 443307 [details] Build fix
EWS
Comment 2 2021-11-04 09:39:05 PDT
Committed r285265 (243876@main): <https://commits.webkit.org/243876@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443307 [details].
Jim Mason
Comment 3 2021-11-05 02:43:23 PDT
Thanks for the quick fix! You missed one: /build/rtutils/components/desktop/webkitgtk4-dev/webkit/Source/WebKit/UIProcess/soup/WebProcessPoolSoup.cpp:46:9: error: 'MemoryPressureMonitor' has not been declared 46 | if (MemoryPressureMonitor::disabled()) | ^~~~~~~~~~~~~~~~~~~~~
Adrian Perez
Comment 4 2021-11-08 14:07:52 PST
EWS
Comment 5 2021-11-08 15:10:04 PST
Committed r285435 (243991@main): <https://commits.webkit.org/243991@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443603 [details].
Jim Mason
Comment 6 2021-11-09 04:43:47 PST
I can confirm, it now builds as expected. Thanks!
Adrian Perez
Comment 7 2021-11-09 05:34:09 PST
(In reply to Jim Mason from comment #6) > I can confirm, it now builds as expected. Thanks! You're welcome! 👋️
Note You need to log in before you can comment on or make changes to this bug.