REGRESSION(r285077) [GLIB] 'MemoryPressureMonitor' has not been declared https://bugs.webkit.org/show_bug.cgi?id=232706

Unreviewed non-linux build fix.

MemoryPressureMonitor is only available on Linux, so its usage should
be guarded, like WebProcessPool.cpp does when starting it.


* UIProcess/glib/WebProcessPoolGLib.cpp:
(WebKit::WebProcessPool::platformInitialize): Add OS(LINUX) guard.
(WebKit::WebProcessPool::platformInitializeWebProcess): Ditto.



Canonical link: https://commits.webkit.org/243876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285265 268f45cc-cd09-0410-ab3c-d52691b4dbfc